// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-iBYQkv jZjiKk"
>
  <li
    className="sc-ftTHYK cefUdR"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-ftTHYK cefUdR"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-ftTHYK cefUdR"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-ftTHYK cefUdR"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-iBYQkv jZjiKk"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-iBYQkv jZjiKk"
>
  <li
    className="sc-ftTHYK cefUdR"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-ftTHYK cefUdR"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-ftTHYK cefUdR"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
